[package]
name = "rotor"
version = "0.1.0"
authors = ["SphericalKat <amolele@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# json (required)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date time (required)
chrono = { version = "0.4", features = ["serde"] }

# logging lib(required)
log = "0.4.8"
fast_log="1.3"

# BigDecimal lib(optional)
bigdecimal = "0.2"

# rbatis lib(required)
rbatis =  { version = "1.8" }
dotenv = "0.15.0"

teloxide = "0.3"
teloxide-macros = "0.3"

pretty_env_logger = "0.4.0"

tokio = { version =  "0.2.11", features = ["rt-threaded", "macros"] }