[package]
name = "rotor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.38"
tracing-subscriber = "0.3.17"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.70"
